--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -8,8 +8,27 @@
   text-decoration: none;
   min-width: 320px;
   width: 100%;
-  min-height: 200px;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
 }
+.cover__background::before {
+  content: "";
+  background-color: #2A2C2F;
+  opacity: 0.3;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.cover__background:hover {
+  opacity: 0.8;
+  transition: opacity, 0.8s, linear;
+}
+
 
 
