--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,14 +1,11 @@
 .cover {
   position: relative;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   margin: 66px auto 64px;
   z-index: 2;
   min-width: 320px;
   width: 100%;
   min-height: 200px;
-
 }
 @media screen and (min-width: 768px) {
   .cover {
@@ -24,8 +21,7 @@
 }
 @media screen and (min-width: 1280px) {
   .cover {
-    min-width: 1184px;
+    max-width: 1184px;
     min-height: 740px;
   }
-
 }
