--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,16 +1,15 @@
 .footer__links {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(5, min-content);
-  row-gap: 32px;
-  padding-bottom: 48px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 0 48px 0;
+  list-style: none;
+  margin: 0;
 }
 @media screen and (min-width: 768px) {
   .footer__links {
-    grid-template-rows: min-content;
-    grid-template-columns: repeat(5, max-content);
-    column-gap: 18px;
+    flex-direction: row;
     padding: 0;
+    min-width: 465px;
   }
-
 }
