--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,20 +3,17 @@
   line-height: 1.1;
   font-weight: normal;
   color: white;
-  margin: 0 18px 0 0;
+  margin-left: 18px;
   text-decoration: none;
 }
-.header__lang-link:last-of-type {
-  margin-right: 0;
-  margin-left: 0;
-}
-.header__lang-link_active {
-  text-decoration: underline;
+.header__lang-link:hover {
+  color: #FFFFFF;
+  opacity: 0.8;
+  transition: opacity, 0.3s, ease;
 }
 @media screen and (min-width: 768px) {
   .header__lang-link {
     font-size: 24px;
     line-height: 1.2;
-    margin: 18px 18px 6px 0;
   }
 }
