--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,8 +1,8 @@
 .header__lang-links {
-  margin: 14px 0 8px;
-}
-@media screen and (min-width: 768px) {
-  .header__lang-links {
-    margin: 18px 0 6px 0;
-  }
+  display: flex;
+  flex-direction: row;
+  align-content: flex-end;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
