--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,9 +2,8 @@
   font-size: 12px;
   line-height: 1.5;
   font-style: normal;
-  font-weight: bold;
   color: #FFFFFF;
-  min-height: 90px;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
