--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,7 +5,6 @@
   line-height: 1.63;
   color: #FFFFFF;
   width: 100%;
-  min-height: 208px;
   margin: 40px 0 34px;
 }
 
@@ -16,6 +15,6 @@
 }
 @media screen and (min-width: 1024px) {
   .intro__text {
-    width: 690px;
+    max-width: 690px;
   }
 }
