--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,8 +5,7 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin-top: 8px;
-  margin-left: 16px;
+  margin: 8px 0 0 16px;
 }
 @media screen and (min-width: 768px) {
   .lead__caption {
