--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(288px, 484px));
+  grid-template-columns: 1fr;
   margin: 0;
   row-gap: 32px;
   margin-bottom: 50px;
@@ -10,10 +10,14 @@
 
 @media screen and (min-width: 768px) {
   .place {
-    grid-template-rows: max-content;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, max-content);
+    grid-template-areas:
+      "title website"
+      "image description";
     column-gap: 28px;
     row-gap: 48px;
-    margin-bottom: 73px;
+    margin-bottom: 90px;
   }
 }
 @media screen and (min-width: 1024px) {
