--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -25,7 +25,7 @@
   top: 0;
   left: 0;
 }
-.cover__background:hover {
+.cover__background:hover.cover__background::before {
   opacity: 0.8;
   transition: opacity, 0.8s, linear;
 }
