--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,7 +6,7 @@
   color: #FFFFFF;
   text-decoration: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 16px 0;
 }
 .footer__link:hover {
   color: #FFFFFF;
